fix modal z-index issue

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -9,7 +9,6 @@
   transform: translate(-50%, -50%);
   opacity: 0;
   margin-top: 30px;
-  z-index: -1000;
   @include ui-animation(opacity, margin-top);
 
   .modal {
@@ -57,5 +56,4 @@
 :host(.visible) {
   opacity: 1;
   margin-top: 0;
-  z-index: 10;
 }
